# FinalProject-Group16

./: .gitignore  CMakeLists.txt  README.md  Registers.cpp
.github/workflows/: build.yml  format.yml  release.yml
docs/: Makefile  main.md
examples/: CMakeLists.txt  CMakelists.txt  Makefile  hello.cpp
src/: console.h  main.cpp  tester.cpp  tester.h
src/hardware/: memory.cpp  memory.h
src/hardware/CPU/: CPU.cpp  CPU.h  register.cpp  register.h
src/hardware/GPU/: gpu.cpp  gpu.h
src/processes/: console.cpp  console.h  os.cpp  os.h
tests/: checkin1_test.sh  currentTest.sh  results.txt  run_test.sh
tests/hello_world1/: 1.out
tests/hello_world2/: 1.out
tests/hello_world3/: 1.out
tests/slug_files/: box.slug  hello_world1.slug  hello_world2.slug  hello_world3.slug  hello_world3_input.txt  image.slug  input.slug
